fixed spacing error to style-START and style-desktop

--- a/style-desktop.css
+++ b/style-desktop.css
@@ -55,7 +55,7 @@ a:hover {
  }
 
 @media all and (max-width:1000px) {
-  align-items: center;
+ 
 
 }
 
